<resources>
    <string name="app_name">My Application</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="bounty">Bounty</string>
    <string name="details">Details</string>
    <string name="lorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseeflorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impsee">Lorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impseefLorem impseeLorem impseeLorem impseeLorem impseeLorem impseeLorem impsee</string>
    <string name="mike_voermans">Mike Voermans</string>
    <string name="_2000000">2000000</string>
    <string name="_21">21</string>
    <string name="man">Man</string>
    <string name="wantedreport">WantedReport</string>
    <string name="take_picture">Take Picture</string>
    <string name="call_911">Call 911</string>
    <string name="gps_position">GPS Position</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="report">Report</string>
</resources>
