<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mike.myapplication.MainActivity"
    android:background="#222222">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/wanted"
        android:contentDescription ="@string/description"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/tableLayout"
        android:stretchColumns="0,1"
        android:background="@drawable/bg"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:orientation="horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:animationCache="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:id="@+id/textView"
                android:textColor="#ffffff"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:text="@string/mike_voermans" />
        </TableRow><TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/textView3"
            android:textColor="#ffffff"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:text="@string/man" />
    </TableRow><TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/textView5"
            android:textColor="#ffffff"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:text="@string/_21" />
    </TableRow><TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bounty"
            android:id="@+id/textView7"
            android:textColor="#ffffff"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView28"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:text="@string/_2000000" />
    </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:id="@+id/textView8"
            android:textColor="#ffffff" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/scrollView"
            android:fillViewport="false" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impseeflorem_impseelorem_impseelorem_impseelorem_impseelorem_impseelorem_impsee"
                android:id="@+id/textView9"
                android:textColor="#ffffff" />
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
